fixing log/mode/party info panels for narrow and tall screens; changing turn-info-container to an id; setting styles for scrollbars to entire game

--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -10,4 +10,6 @@ body {
   width: 100%;
   height: 100%;
   touch-action: none;
+  scrollbar-color: seagreen #225555;
+  scrollbar-width: thin;
 }
